adding tag named files

--- a/fluentd/local.conf
+++ b/fluentd/local.conf
@@ -19,13 +19,13 @@
   <match docker.**>
     @type file
     @id output_docker1
-    path /fluentd/log/docker.*.log
+    path /fluentd/log/${tag}.*.log
     symlink_path /fluentd/log/docker.log
     append true
     time_slice_format %Y%m%d
     time_slice_wait 1m
     time_format %Y%m%dT%H%M%S%z
-    buffer_path /fluentd/log/docker.*.log
+    buffer_path /fluentd/log/${tag}.*.log
   </match>
   <match **>
     @type file
