--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - /mnt/media:/media
     depends_on:
       - fluentd
+    devices:
+      - /dev/dri:/dev/dri
     environment:
       - "VERSION=latest"
       - "PGID=1000"
@@ -55,7 +57,6 @@ services:
       - sabnzbd
       - plex
       - deluge
-      - jackett
       - fluentd
     ports:
       - "8989:8989"
@@ -81,7 +82,6 @@ services:
     links:
       - sabnzbd
       - deluge
-      - jackett
       - fluentd
     ports:
       - "5050:5050"
@@ -107,28 +107,6 @@ services:
     volumes:
       - /opt/deluge/config:/config
       - /mnt/media:/media
-    depends_on:
-      - fluentd
-    environment:
-      - "PGID=1000"
-      - "PUID=1000"
-      - "TZ=America/Chicago"
-
-  jackett:
-    image: linuxserver/jackett
-    hostname: jackett
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-address: 192.168.1.12:24224
-        tag: docker.jackett
-    links:
-      - fluentd
-    ports:
-      - "9117:9117"
-    volumes:
-      - /opt/jackett/config:/config
-      - /opt/jackett/downloads:/downloads
     depends_on:
       - fluentd
     environment:
@@ -172,13 +150,3 @@ services:
       - "PUID=1000"
       - "TZ=America/Chicago"
       - "FLUENTD_CONF=local.conf"
-
-  dns:
-    image: sameersbn/bind:9.9.5-20170626
-    hostname: dns
-    ports:
-      - "53:53"
-      - "53:53/udp"
-      - "10000:10000"
-    volumes:
-      - /mnt/media/dns:/data
