--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,6 +145,18 @@ services:
       - "ADMIN_PASS=${PIHOLE_PASS}"
       - "SERVER_IP=${SERVER_IP}"
 
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    environment:
+      - "PGID=1000"
+      - "PUID=1000"
+      - "TZ=America/Chicago"
+
   fluentd:
     image: fluent/fluentd
     hostname: fluentd
