--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,42 +1,42 @@
 http {
   server {
       listen  80;
-      server_name  media media.shift.com;
+      server_name  media.shift.com;
 
       location /plex {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:32400/web/index.html;
+          proxy_pass  http://media.shift.com:32400/web/index.html;
       }
 
       location /torrents {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:8112;
+          proxy_pass  http://media.shift.com:8112;
       }
 
       location /sab {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:8080/sabnzbd/;
+          proxy_pass  http://media.shift.com:8080/sabnzbd/;
       }
 
       location /movies {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:5050;
+          proxy_pass  http://media.shift.com:5050;
       }
 
       location /tv {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:8989;
+          proxy_pass  http://media.shift.com:8989;
       }
 
       location /pihole {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://media:8000/admin;
+          proxy_pass  http://media.shift.com:8000/admin;
       }
   }
 }
