--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 http {
   server {
       resolver 192.168.1.12;
-      set $backend_media "http://media.shift.com"
+      set $backend_media "http://media.shift.com";
       listen  80;
       server_name  media.shift.com;
 
