--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,18 @@
+daemon off;
+error_log /dev/stdout info;
+
 events {
   worker_connections  4096;
 }
 
 http {
+  access_log /dev/stdout;
+
   server {
       resolver 192.168.1.12;
       set $backend_media "http://media.shift.com";
       listen  80;
-      server_name  media.shift.com;
+      server_name  nginx.shift.com;
 
       location /plex {
           proxy_set_header Host $host;
