--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,44 +9,43 @@ http {
 
   server {
       resolver 192.168.1.12;
-      set $backend_media "http://media.shift.com";
       listen  80;
       server_name  nginx.shift.com;
 
       location /plex {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:32400/web/index.html;
+          proxy_pass  http://192.168.1.12:32400/web/index.html;
       }
 
       location /torrents {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:8112;
+          proxy_pass  http://192.168.1.12:8112;
       }
 
       location /sab {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:8080/sabnzbd/;
+          proxy_pass  http://192.168.1.12:8080/sabnzbd/;
       }
 
       location /movies {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:5050;
+          proxy_pass  http://192.168.1.12:5050;
       }
 
       location /tv {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:8989;
+          proxy_pass  http://192.168.1.12:8989;
       }
 
       location /pihole {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  $backend_media:8000/admin;
+          proxy_pass  http://192.168.1.12:8000/admin;
       }
   }
 }
