--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,14 +8,13 @@ http {
   access_log /dev/stdout;
 
   server {
-      resolver 192.168.1.12;
       listen  80;
       server_name  nginx.shift.com;
 
       location /plex {
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:32400/web/index.html;
+          proxy_pass  http://plex:32400/web/index.html;
       }
 
       location /torrents {
