--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,43 +8,10 @@ http {
   access_log /dev/stdout;
 
   server {
+      resolver 192.168.1.12;
       listen  80;
-      server_name  nginx.shift.com;
+      server_name media media.shift.com;
 
-      location /plex {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://plex:32400/web/index.html;
-      }
-
-      location /torrents {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:8112;
-      }
-
-      location /sab {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:8080/sabnzbd/;
-      }
-
-      location /movies {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:5050;
-      }
-
-      location /tv {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:8989;
-      }
-
-      location /pihole {
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_pass  http://192.168.1.12:8000/admin;
-      }
+      rewrite ^/plex http://media.shift.com:32400/web/index.html permanent;
   }
 }
