--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,5 +13,10 @@ http {
       server_name media media.shift.com;
 
       rewrite ^/plex http://media.shift.com:32400/web/index.html permanent;
+      rewrite ^/torrents http://media.shift.com:8112 permanent;
+      rewrite ^/sab http://media.shift.com:8080/sabnzbd permanent;
+      rewrite ^/movies http://media.shift.com:5050 permanent;
+      rewrite ^/tv http://media.shift.com:8989 permanent;
+      rewrite ^/pihole http://media.shift.com:8000/admin
   }
 }
