--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,6 @@ http {
       rewrite ^/sab http://media.shift.com:8080/sabnzbd permanent;
       rewrite ^/movies http://media.shift.com:5050 permanent;
       rewrite ^/tv http://media.shift.com:8989 permanent;
-      rewrite ^/pihole http://media.shift.com:8000/admin
+      rewrite ^/pihole http://media.shift.com:8000/admin permanent;
   }
 }
