--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-      - /opt/pihole/etc/hosts:/etc/hosts
+      - /mnt/storage/docker/pihole/etc/hosts:/etc/hosts
     environment:
       - "PGID=1000"
       - "PUID=1000"
