--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - /mnt/storage/docker/sabnzbd:/config
       - /mnt/media:/media
+      - /tmp/downloads:/downloads
     environment:
       - "PGID=1000"
       - "PUID=1000"
@@ -43,6 +44,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /mnt/storage/docker/sonarr:/config
       - /mnt/media:/media
+      - /tmp/downloads:/downloads
     environment:
       - "PGID=1000"
       - "PUID=1000"
@@ -59,6 +61,7 @@ services:
     volumes:
       - /mnt/storage/docker/couchpotato:/config
       - /mnt/media:/media
+      - /tmp/downloads:/downloads
     environment:
       - "PGID=1000"
       - "PUID=1000"
@@ -71,6 +74,7 @@ services:
     volumes:
       - /mnt/storage/docker/deluge:/config
       - /mnt/media:/media
+      - /tmp/downloads:/downloads
     environment:
       - "PGID=1000"
       - "PUID=1000"
